# ctrt

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
.github/workflows/: clang.yml  gcc.yml  msvc.yml
src/: CMakeLists.txt  brdf.hpp  camera.hpp  canvas.hpp  ctrt.cpp.in  image.hpp  lights.hpp  main.cpp  materials.hpp  math.hpp  ray.hpp  renderer.hpp  scene.hpp  shapes.hpp  utils.hpp  vector.hpp
src/tiles/: CMakeLists.txt  tile.cpp.in  tile.hpp.in
src/tracer/: CMakeLists.txt  image.hpp  lights.hpp  materials.hpp  renderer.hpp  shapes.hpp  vector.hpp
test/: CMakeLists.txt  camera_test.cpp  canvas_test.cpp  image_test.cpp  materials_test.cpp  math_test.cpp  ray_test.cpp  scene_test.cpp  shapes_test.cpp  utils_test.cpp  vector_test.cpp
